# StockAnalysis

./: .gitignore  CMakeLists.txt  README.md  Stock.hpp  main.cpp
AnalysisInitializer/: AnalysisInitializer.cpp  AnalysisInitializer.hpp
DataCollector/: AMZN.txt  DataCollector.cpp  DataCollector.hpp
StatisticsCalculator/: StatisticsCalculator.cpp  StatisticsCalculator.hpp
StreamStatisticsCalculator/: StreamStatisticsCalculator.cpp  StreamStatisticsCalculator.hpp
